Mail Service Implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,10 @@ spring.data.mongodb.database=EmployeeDB
 
 Maximum_Number_Of_Levels=5
 Base_Condition_for_levels=0
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=the.nobody.171@gmail.com
+spring.mail.password=gcfq tqqt oagb ltlc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
